# nano-web

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.multi  Dockerfile.single  Dockerfile.uring-test  HOMEBREW.md  IO_URING.md  LICENSE  Makefile  README.md  Taskfile.yml  bun.lockb  compression.go  ebpf-handover.md  fast.go  go.mod  go.sum  lefthook.yml  main.go  main.ts  main_test.go  mimetypes.go  package.json  release.toml  routes.go  server.go  template.go  version.go
.cargo/: config.toml
.claude/: ci-cd-template-prompt.md
.github/workflows/: benchmark.yml  build.yml  ci-cd.yml  ci.yml  docker-branch.yml  docker-latest.yml  publish-container.yml  publish-image.yml  publish-package.yml  push-package-amd64.yml  push-package-arm64.yml  push-package.yml  release.yml  test.yml
.task/checksum/: build
Formula/: nano-web.rb
bench/: README.md  compare.py  run.sh
benches/: server_bench.rs
ebpf/: Makefile  README.md  http_server.c
graphite-demo/: server.js
public.bak/: index-broken.html  index.html
scripts/: bench.sh  docker-build.sh  get-version.sh  make-manifest.sh  perf-test.sh  release.sh  update-changelog.sh
src/: axum_server.rs  cli.rs  compression.go  compression.rs  ebpf_server.rs  engine.rs  fast_routes.rs  http.rs  lib.rs  main.go  main.rs  main_test.go  mime_types.rs  mimetypes.go  path.rs  raw.rs  registered_buffers.rs  response_buffer.rs  routes.go  routes.rs  security.rs  server.go  server.rs  server_multiuring.rs  server_uring.rs  template.rs  ultra_server.rs  uring.rs  version.go
test-public/: index.html
tests/: integration_tests.rs
