[package]
name = "nano-web"
version = "0.12.1"
edition = "2021"
description = "Ultra-fast static file server"
authors = ["Radio Silence <james@radiosilence.com>"]
license = "MIT"
repository = "https://github.com/radiosilence/nano-web"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.47", features = ["net", "io-util", "rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = "6.3"
anyhow = "1.0"
walkdir = "2.0"
bytes = "1.10"
md5 = "0.8"
brotli = "8.0"
flate2 = "1.1"
zstd = "0.13"
fxhash = "0.2"
ahash = "0.8"
dashmap = "6.1"
memmap2 = "0.9"
rayon = "1.10"
simd-json = "0.14"
urlencoding = "2.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tokio-test = "0.4"

[[bench]]
name = "server_bench"
harness = false

[[bin]]
name = "nano-web"
path = "src/main.rs"

# Dev profile for faster compilation during development
[profile.dev]
opt-level = 1
debug = true

# Release profile optimized for performance and size
[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true