[package]
name = "nano-web"
version = "1.3.0"
edition = "2021"
rust-version = "1.75"
description = "Static file server built with Rust with pre-compressed in-memory caching"
authors = ["James Cleveland <jc@blit.cc>"]
license = "MIT"
repository = "https://github.com/radiosilence/nano-web"
homepage = "https://github.com/radiosilence/nano-web"
documentation = "https://docs.rs/nano-web"
keywords = ["http", "server", "spa", "static", "web"]
categories = ["command-line-utilities", "web-programming::http-server"]
readme = "README.md"
exclude = [".github/", "docs/", "public/"]

[[bin]]
name = "nano-web"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
brotli = "8.0"
bytes = "1.10"
httpdate = "1"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dashmap = "6.1"
flate2 = "1.1"
foldhash = "0.1"
http-body-util = "0.1"
hyper = { version = "1.6", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["http1", "http2", "server", "tokio"] }
mime_guess = "2.0"
minijinja = "2.7"
rayon = "1.10"
serde = "1.0"
serde_json = "1.0"
socket2 = { version = "0.6", features = ["all"] }
tokio = { version = "1.47", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
urlencoding = "2.1"
walkdir = "2.0"
zstd = "0.13"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3.8"
tokio-test = "0.4"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.43"

# Dev profile for faster compilation during development
[profile.dev]
opt-level = 1
debug = true

# Release profile optimized for performance and size
[profile.release]
opt-level = 3
debug = false
strip = true
lto = "fat"
panic = "abort"
codegen-units = 1
