[package]
name = "nano-web"
version = "1.4.2"
edition = "2021"
rust-version = "1.75"
description = "Static file server built with Rust with pre-compressed in-memory caching"
authors = ["James Cleveland <jc@blit.cc>"]
license = "MIT"
repository = "https://github.com/radiosilence/nano-web"
homepage = "https://github.com/radiosilence/nano-web"
documentation = "https://docs.rs/nano-web"
keywords = ["http", "server", "spa", "static", "web"]
categories = ["command-line-utilities", "web-programming::http-server"]
readme = "README.md"
exclude = [".github/", "docs/", "public/"]

[[bin]]
name = "nano-web"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
brotli = "8.0"
bytes = "1.11"
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
dashmap = "6.1"
flate2 = "1.1"
rustc-hash = "2"
http-body-util = "0.1"
httpdate = "1"
hyper = { version = "1.9", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["http1", "server", "tokio"] }
mime_guess = "2.0"
minijinja = "2.19"
rayon = "1.10"
serde = "1.0"
serde_json = "1.0"
socket2 = { version = "0.6.3", features = ["all"] }
tokio = { version = "1.51", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
urlencoding = "2.1"
walkdir = "2.0"
zstd = "0.13"

[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }
tempfile = "3.27"
tokio-test = "0.4"

[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.43"

[lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
pedantic = { level = "warn", priority = -1 }

[lints.rust]
unsafe_code = "warn"

# Dev profile for faster compilation during development
[profile.dev]
opt-level = 1
debug = true

# Release profile optimized for performance and size
[profile.release]
opt-level = 3
debug = false
strip = true
lto = "fat"
panic = "abort"
codegen-units = 1
